--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 exports
 __pycache__/scores.cpython-39.pyc
 __pycache__/scores.cpython-39.pyc
+.vscode/settings.json
+__pycache__/set_screen_scale.cpython-39.pyc
+.vscode/settings.json
