--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
 	"zenMode.hideLineNumbers": false,
 	"search.showLineNumbers": true,
-	"python.pythonPath": "C:\\Users\\arvid\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+	"python.pythonPath": "C:\\Python39\\python.exe",
 	"cSpell.ignoreWords": [
 		"bosca",
 		"camingo",
