--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ __pycache__/scores.cpython-39.pyc
 .vscode/settings.json
 __pycache__/set_screen_scale.cpython-39.pyc
 .vscode/settings.json
+.vscode/settings.json
